--- a/login.html
+++ b/login.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="color-scheme" content="light dark">
   <title>Login - Painel Financeiro</title>
   <!-- Biblioteca do Supabase -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <style>
     :root{
       --bg:#e8ecf1; --card:#ffffff; --text:#17233b; --accent:#2b7be4; --muted:#6b7684;
-      font-family: Inter, system-ui, -apple-system, sans-serif;
+      font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
     }
     body { margin: 0; background: var(--bg); color: var(--text); display: flex; align-items: center; justify-content: center; height: 100vh; }
     .login-card { background: var(--card); padding: 40px; border-radius: 12px; box-shadow: 0 6px 18px rgba(30,50,80,0.08); width: 100%; max-width: 360px; }
