--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="color-scheme" content="light dark">
   <title>Dashboard Financeiro - Painel</title>
   <!-- Biblioteca do Supabase -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
@@ -10,7 +11,7 @@
     :root{
       --bg:#e8ecf1; --card:#f0f3f7; --muted:#6b7684; --accent:#2b7be4; --success:#17b169; --danger:#ff4d4f;
       --shadow: 0 6px 18px rgba(30,50,80,0.08);
-      font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
+      font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
     }
     *{box-sizing:border-box}
     body{margin:0;background:var(--bg);color:#17233b}
